<resources>
    <string name="app_name">Расписание</string>

    <string name="title_activity_date">Выбор даты</string>

    <string name="action_search">Поиск</string>
    <string name="action_select_criterion">Выбрать критерий</string>
    <string name="action_select_date">Выбрать дату</string>

    <string name="connection_problems_message">Не удалось загрузить данные</string>
    <string name="no_lessons_found_message">Пары отсутствуют</string>

    <string name="date_selection_type_today">Сегодня</string>
    <string name="date_selection_type_seven_days">7 дней</string>
    <string name="date_selection_type_week">Текущая неделя</string>
    <string name="date_selection_type_next_week">Следующая неделя</string>
    <string name="date_selection_type_month">Текущий месяц</string>
    <string name="date_selection_type_custom">Свой вариант</string>

    <string name="date_custom_from">От</string>
    <string name="date_custom_to">До</string>

    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>

    <string name="recent">Недавние</string>
    <string name="all">Все</string>

    <string name="range">Диапазон</string>
    <string name="dates">Даты</string>

    <array name="daysOfWeek">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </array>

    <array name="criteria">
        <item>Группы</item>
        <item>Преподаватели</item>
        <item>Аудитории</item>
    </array>
</resources>
