<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.ionov.timetable.fragments.DateFragment">

    <ru.ionov.timetable.views.RobotoTextView
        android:text="@string/range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:singleLine="true"
        android:textColor="@color/primary"
        android:background="@color/switch_thumb_normal_material_light"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/dateSelectionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <RadioButton
            android:id="@id/dateSelectionTypeToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_selection_type_today"/>

        <RadioButton
            android:id="@id/dateSelectionTypeSevenDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_selection_type_seven_days"/>

        <RadioButton
            android:id="@id/dateSelectionTypeWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_selection_type_week"/>

        <RadioButton
            android:id="@id/dateSelectionTypeNextWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_selection_type_next_week"/>

        <RadioButton
            android:id="@id/dateSelectionTypeMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_selection_type_month"/>

        <RadioButton
            android:id="@id/dateSelectionTypeCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_selection_type_custom"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/customDateRange"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ru.ionov.timetable.views.RobotoTextView
            android:text="@string/dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/primary"
            android:background="@color/switch_thumb_normal_material_light"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/customDateFrom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp">

            <ru.ionov.timetable.views.RobotoTextView
                android:text="@string/date_custom_from"
                android:scrollHorizontally="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="16sp"/>

            <ru.ionov.timetable.views.RobotoTextView
                android:id="@+id/customDateFromValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/abc_secondary_text_material_light"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/customDateTo"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp">

            <ru.ionov.timetable.views.RobotoTextView
                android:text="@string/date_custom_to"
                android:scrollHorizontally="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="16sp"/>

            <ru.ionov.timetable.views.RobotoTextView
                android:id="@+id/customDateToValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/abc_secondary_text_material_light"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
