<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context="ru.ionov.timetable.activities.DateActivity">

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="0dp"
        card_view:cardMaxElevation="1dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <RadioGroup
            android:id="@+id/dateSelectionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/dateSelectionTypeToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_selection_type_today"/>

            <RadioButton
                android:id="@+id/dateSelectionTypeSevenDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_selection_type_seven_days"/>

            <RadioButton
                android:id="@+id/dateSelectionTypeWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_selection_type_week"/>

            <RadioButton
                android:id="@+id/dateSelectionTypeNextWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_selection_type_next_week"/>

            <RadioButton
                android:id="@+id/dateSelectionTypeMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_selection_type_month"/>

            <RadioButton
                android:id="@+id/dateSelectionTypeCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_selection_type_custom"/>

        </RadioGroup>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="0dp"
        card_view:cardMaxElevation="1dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp">

            <ru.ionov.timetable.views.RobotoTextView
                android:id="@+id/customDateFrom"
                android:text="@string/date_custom_from"
                android:scrollHorizontally="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="16sp"/>

            <ru.ionov.timetable.views.RobotoTextView
                android:id="@+id/customDateFromValue"
                android:text="14.06.15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/abc_secondary_text_material_light"
                android:textSize="14sp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="0dp"
        card_view:cardMaxElevation="1dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:padding="16dp">

            <ru.ionov.timetable.views.RobotoTextView
                android:id="@+id/customDateTo"
                android:text="@string/date_custom_to"
                android:scrollHorizontally="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="16sp"/>

            <ru.ionov.timetable.views.RobotoTextView
                android:id="@+id/customDateToValue"
                android:text="14.06.15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/abc_secondary_text_material_light"
                android:textSize="14sp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
